--- a/index.html
+++ b/index.html
@@ -1,57 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin calculator | CN-M</title>
-    <link rel="stylesheet" href="./style/style.css">
-    <script src="./javascript/index.js" defer></script>
-</head>
-<body>
+    <link rel="stylesheet" href="./style/style.css" />
+    <!-- <script src="./javascript/index.js" defer></script> -->
+    <script src="./javascript/thing.js" defer></script>
+  </head>
+  <body>
     <div class="container">
-        <div class="calculator">
-            <div class="display">
-                <p></p>
-            </div>
-
-            <div class="row row-1">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="divide">÷</button>
-            </div>
-
-            <div class="row row-2">
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
-                <button id="add">+</button>
-            </div>
-
-            <div class="row row-3">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="multiply">×</button>
-            </div>
-
-            <div class="row row-4">
-                <button id="0">0</button>
-                <button id="minus">-</button>
-                <button id="clear">Clear</button>
-            </div>
-
-            <div class="equals">
-                <button id="equals">=</button>
-            </div>
-            
+      <div class="calculator">
+        <div class="display">
+          <p></p>
         </div>
 
-        <div class="footer">
-            <p>Copyright Ember</p>
+        <div class="row row-1">
+          <button id="7">7</button>
+          <button id="8">8</button>
+          <button id="9">9</button>
+          <button id="divide">÷</button>
         </div>
+
+        <div class="row row-2">
+          <button id="4">4</button>
+          <button id="5">5</button>
+          <button id="6">6</button>
+          <button id="add">+</button>
+        </div>
+
+        <div class="row row-3">
+          <button id="1">1</button>
+          <button id="2">2</button>
+          <button id="3">3</button>
+          <button id="multiply">×</button>
+        </div>
+
+        <div class="row row-4">
+          <button id="0">0</button>
+          <button id="minus">-</button>
+          <button id="clear">Clear</button>
+        </div>
+
+        <div class="equals">
+          <button id="equals">=</button>
+        </div>
+      </div>
+
+      <div class="footer">
+        <p>Copyright Ember</p>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
