--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin calculator | CN-M</title>
     <link rel="stylesheet" href="./style/style.css" />
-    <!-- <script src="./javascript/index.js" defer></script> -->
-    <script src="./javascript/thing.js" defer></script>
+    <script src="./javascript/index.js" defer></script>
   </head>
   <body>
     <div class="container">
